fix: docs-layout scrollbar-effect

--- a/css/docs.css
+++ b/css/docs.css
@@ -106,6 +106,15 @@
     padding: 10px 10px;
 }
 
+.docs-left{
+    height: 700px;
+    overflow-y: auto;
+}
+
+.docs-right{
+    padding: 0 20px;
+}
+
 .title {
     background-color: white;
     color: black;
